# PSE

./: AccidPair.cpp  AccidPair.hpp  Accids.cpp  Accids.hpp  AlgoName.cpp  CMakeLists.txt  MERGE.md  Makefile  ModeName.cpp  ModeName.hpp  README.md  TODO.md  WeberBluesModal_static.cpp  WeberBluesModal_static.hpp  WeberModal_static.cpp  WeberModal_static.hpp  Weber_static.cpp  Weber_static.hpp  compile.sh
grid/: PSGrid.cpp  PSGrid.hpp  PSGride.cpp  PSGride.hpp  PSGridr.cpp  PSGridr.hpp  PSGridy.cpp
notes/: 20250131.md  Augustin221129.md  Augustin230217.md  PSEeval.md  PitchSpellingRevised.md  TODO.md  algo2.md  augmented.mscz  chromatic.mscz  chromatic2.mscz  complexity.md  criteres.md  diminished.mscz  draftalgo.md  merge_250127.md  proposition_de_distance_tonalo-modale.pages  ps13.md  refs.md
pse.xcodeproj/: project.pbxproj
pse.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
pse.xcodeproj/project.xcworkspace/xcuserdata/jacquema.xcuserdatad/: UserInterfaceState.xcuserstate
pse.xcodeproj/xcshareddata/xcschemes/: pypse.xcscheme  unit_test.xcscheme
pse.xcodeproj/xcuserdata/jacquema.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
scale/: Mode.cpp  Mode.hpp  ModeFactory.cpp  ModeFactory.hpp  ModeName.hpp
scripts/: LG.py  PSeval.py  PSeval_fct.py  PSeval_speller.py  README.md  bug350.py  conda.sh  evalASAP.py  evalBach.py  evalFRB.py  evalFRB_back.py  evalFiloBass.py  evalFiloBass_back.py  evalFiloSax.py  evalLG.py  evalM21.py  evalOmnibook.py  evalXML.py  memo_beta.md  requirements.txt  tons.csv
src/: README.md  Speller.cpp  Speller.hpp  debugpse.cpp  pypse.cpp
src/KSKF/: KeyFind.hpp
src/KrumhanslSchmuckler/: KeyFind.cpp  README.md
src/PS13/: PS13.cpp  PS13.hpp  README.md
src/PS14/: PS14.cpp  PS14.hpp
src/PSE/: PSBag.cpp  PSBag.hpp  PSChord.hpp  PSConfig.cpp  PSConfig0.cpp  PSConfig2.hpp  PSCost.hpp  PSE.cpp  PSE.hpp  PSOrder.cpp  PSPath.cpp  PSPath.hpp  PSTable.cpp  PSTable.hpp  PSTable_230224.hpp  PSVector.cpp  PSVector.hpp  README.md  Transition.cpp  Transition.hpp
src/Spiral/: InputSegmentSpiral.cpp  InputSegmentSpiral.hpp  README.md  Spiral.cpp  Spiral.hpp
src/chord/: PSChord.cpp  PSChord.hpp  README.md
src/cost/:     ADplus.cpp  ACCID.cpp  ADlex.cpp  Cost.cpp  Cost.hpp  Cost.tpp  CostA.cpp  CostA.hpp  CostAD.cpp  CostAD.hpp  CostADlex.cpp  CostADlex.hpp  CostADplex.cpp  CostADplex.hpp  CostADplud.cpp  CostADplud.hpp  CostADplus.cpp  CostADplus.hpp  CostAT.cpp  CostAT.hpp  CostType.cpp  CostType.hpp  Costt.hpp  Costt.tpp  Costtt.hpp  Costtt.tpp  Costu.cpp  Costu.hpp  PSCost.cpp  PSCost.hpp  README.md  TCost.hpp  TCost.tpp  TCostA.hpp  TODO.md
src/general/: PSRational.cpp  PSRational.hpp  Rational.hpp  Speller.cpp  Speller.hpp  config.h  pstrace.cpp  pstrace.hpp  trace.cpp  trace.hpp  utils.cpp  utils.hpp  utils.tpp
src/grid/: PSGrid.cpp  PSGrid.hpp  PSGridq.cpp  PSGridq.hpp  PSGridr.cpp  PSGridr.hpp  PSGridx.cpp  PSGridx.hpp  PSGridy.cpp  PSGridy.hpp
src/import/: PSEnum.cpp  PSEnum.hpp  PSM21Enum.cpp  PSM21Enum.hpp  PSNoteEnum.cpp  PSNoteEnum.hpp  PSRawEnum.cpp  PSRawEnum.hpp  PSWindow.cpp  PSWindow.hpp
src/interval/: Interval.hpp  IntervalHarmonic.cpp  IntervalHarmonic.hpp  IntervalSimple.cpp  IntervalSimple.hpp  README.md
src/pitch/: Accid.cpp  Accid.hpp  AccidPair.hpp  Accidental.cpp  Accidental.hpp  Accids.cpp  Accids.hpp  Enharmonic.cpp  Enharmonic.hpp  Fifths.cpp  Fifths.hpp  IntervalSimple.cpp  IntervalSimple.hpp  MidiNum.cpp  MidiNum.hpp  NoteName.cpp  NoteName.hpp  PWO.cpp  PWO.hpp  Pitch.cpp  Pitch.hpp
src/ps14/: README.md
src/scale/: Mode.cpp  Mode.hpp  ModeFactory.cpp  ModeFactory.hpp  ModeName.cpp  ModeName.hpp  Scale.cpp  Scale.hpp  TODO.md
src/spell/: AccidentState.cpp  AccidentState.hpp  PSBag.cpp  PSBag.hpp  PSChord.cpp  PSChord.hpp  PSConfig.cpp  PSConfig.hpp  PSConfig0.cpp  PSConfig0.hpp  PSConfig1.cpp  PSConfig1.hpp  PSConfig2.cpp  PSConfig2.hpp  PSCost.cpp  PSCost.hpp  PSOrder.hpp  PSPath.cpp  PSPath.hpp  PSState.cpp  PSState.hpp  PSTable.cpp  PSTable.hpp  PSVector.cpp  PSVector.hpp
src/spell/import/: PSEnum.cpp  PSEnum.hpp  PSRawEnum.cpp  PSRawEnum.hpp
src/spellers/: AlgoName.cpp  AlgoName.hpp  README.md  RewritePassing.hpp  Speller.cpp  Speller.hpp  Speller1pass.cpp  Speller1pass.hpp  Speller2pass.cpp  Speller2pass.hpp  SpellerEnum.cpp  SpellerEnum.hpp  Spelli.cpp  Spelli.hpp
src/spellers/PS13/: PS13.cpp  PS13.hpp  README.md
src/spellers/PS14/: PS14.cpp  PS14.hpp  PSD.cpp  README.md
src/spellers/PSE/: PSCost_op.cpp  PSCost_op.hpp  PSE.cpp  PSE.hpp
src/table/: PSBag.cpp  PSBag.hpp  PSChord.cpp  PSChord.hpp  PSConfig.cpp  PSConfig.hpp  PSConfig0.cpp  PSConfig0.hpp  PSConfig1.cpp  PSConfig1.hpp  PSConfig1c.cpp  PSConfig1c.hpp  PSConfig2-chroma.hpp  PSConfig2.cpp  PSConfig2.hpp  PSCost.hpp  PSGlobal.cpp  PSGlobal.hpp  PSGrid.cpp  PSGrid.hpp  PSGridr.cpp  PSGridr.hpp  PSGridy.cpp  PSGridy.hpp  PSOrder.cpp  PSOrder.hpp  PSPath.cpp  PSPath.hpp  PSState.cpp  PSState.hpp  PSState0.cpp  PSState0.hpp  PSState1.cpp  PSState1.hpp  PSState2.cpp  PSState2.hpp  PSTable.cpp  PSTable.hpp  PSTableTon.cpp  PSTableTon.hpp  (+8 more)
src/targets/: PSE.hpp  RewritePassing.cpp  Speller.cpp  Speller.hpp  debugpse.cpp  exemple.cpp  pypse.cpp  pypse.hpp
src/ton/: Fifths.cpp  Fifths.hpp  KeyFifth.cpp  KeyFifth.hpp  ModeName.cpp  ModeName.hpp  TODO.md  Ton.cpp  Ton.hpp  TonIndex.cpp  TonIndex.hpp  Weber.cpp  Weber.hpp  WeberBluesModal_static.cpp  WeberBluesModal_static.hpp  WeberModal.cpp  WeberModal.hpp  WeberModal.txt  WeberModal_static.cpp  WeberModal_static.hpp  Weber_static.cpp  Weber_static.hpp
test/integration/: debugpse.cpp  samples.cpp  samples.hpp
test/unit/: CMakeLists.txt  README.md  TestAccid.cpp  TestAccidental.cpp  TestAccids.cpp  TestBag.cpp  TestCostA.cpp  TestCostADlex.cpp  TestEnharmonic.cpp  TestFifths.cpp  TestKeyFifth.cpp  TestMidiNum.cpp  TestMode.cpp  TestNoteName.cpp  TestPSEnum.cpp  TestPSRawEnum.cpp  TestRank.cpp  TestRankWeber.cpp  TestRewritePassing.cpp  TestScale.cpp  TestState.cpp  TestTon.cpp  TestTonIndex.cpp  unit_test.cpp
(+1 files in other folders)
